log
Sat 30 Mar 2024 12:56:33 AM UTC: 
 tests:  0|6
total_score: 0/70
2c61d39
Sat 30 Mar 2024 01:01:19 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1b59e87
Sat 30 Mar 2024 01:01:34 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
1318fed
Sat 30 Mar 2024 01:01:53 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
2376218
Sat 30 Mar 2024 01:02:42 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b4fd4b2
Sat 30 Mar 2024 01:03:04 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3135284
Sat 30 Mar 2024 01:03:14 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:22: error: ‘list->head’ is a pointer; did you mean to use ‘->’?
   41 |     return list->head.data;
      |                      ^
      |                      ->
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
91891ab
Sat 30 Mar 2024 01:03:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b0bb4d
Sat 30 Mar 2024 01:05:14 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9e83171
Sat 30 Mar 2024 01:05:45 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
76dc209
Sat 30 Mar 2024 01:06:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0fbb020
Sat 30 Mar 2024 01:07:16 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
a212023
Sat 30 Mar 2024 01:08:21 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
76664ef
Sat 30 Mar 2024 01:08:51 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:25: error: ‘list->current->next’ is a pointer; did you mean to use ‘->’?
   51 |   if(list->current->next.data != NULL) {
      |                         ^
      |                         ->
Compilation failed
4f2a379
Sat 30 Mar 2024 01:08:56 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cb57822
Sat 30 Mar 2024 01:09:49 AM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
081b5df
Sat 30 Mar 2024 01:23:20 AM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
b928452
Sat 30 Mar 2024 01:23:36 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
56c1eb8
Sat 30 Mar 2024 01:27:57 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
4141a3d
Sat 30 Mar 2024 01:28:36 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ee0429d
Sat 30 Mar 2024 01:28:59 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5df3631
Sat 30 Mar 2024 01:31:48 AM UTC: 
 list.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
ea8d42a
Sat 30 Mar 2024 01:31:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
548bdd2
Sat 30 Mar 2024 01:32:48 AM UTC: 
 list.c | 13 +------------
 1 file changed, 1 insertion(+), 12 deletions(-)
 tests:  6|4
total_score: 25/70
978303a
Sat 30 Mar 2024 01:33:20 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
023dc73
Sat 30 Mar 2024 01:38:11 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
5f3fae3
Sat 30 Mar 2024 01:40:12 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
ed46f71
Sat 30 Mar 2024 01:43:14 AM UTC: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
9e6838b
Sat 30 Mar 2024 01:44:53 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
78f40a1
Sat 30 Mar 2024 01:45:42 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
2f78266
Sat 30 Mar 2024 01:52:00 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
94e0fc7
Sat 30 Mar 2024 01:54:26 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
1360842
Sat 30 Mar 2024 01:56:25 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
c4c4988
Sat 30 Mar 2024 01:57:05 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
3624fba
Sat 30 Mar 2024 02:06:23 AM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
0faad16
Sat 30 Mar 2024 02:07:57 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|1
total_score: 55/70
eeb2537
Sat 30 Mar 2024 02:09:38 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:131:10: error: ‘popt’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  131 |   return popt;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
656b9c4
Sat 30 Mar 2024 02:10:47 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
  133 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2ab82fe
Sat 30 Mar 2024 02:11:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:119:9: error: variable ‘popt’ set but not used [-Werror=unused-but-set-variable]
  119 |   void* popt;
      |         ^~~~
list.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
  133 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
86b4248
Sat 30 Mar 2024 02:11:29 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
  133 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
54d4c26
Sat 30 Mar 2024 02:11:54 AM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:131:10: error: ‘popt’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  131 |   return popt;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
8186a61
Sat 30 Mar 2024 02:12:13 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
130b76c
Sat 30 Mar 2024 02:15:15 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
914b6ff
Sat 30 Mar 2024 02:17:10 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  12|0
total_score: 70/70
f8a5ace
Sat 30 Mar 2024 02:20:16 AM UTC: 
 list.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  12|0
total_score: 70/70
52c6d85
